--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
 
+# TODO wywalic`ustawienie portu
+server.port=8091
+
 ## TODO wywali???????? File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=D:/StoreFile
