--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 ## PdfPublisher (MultipartProperties)
 # Enable multipart uploads
-spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
 spring.servlet.multipart.file-size-threshold=2KB
 # Max file size.
@@ -18,7 +17,8 @@ file.upload-dir=D:/StoreFile
 # Atlassian confluence properties
 # Host settings
 # URL, username, passsword, pageId
-atlassian.confluence.hostname=localhost
+# TODO WYWALIC TO
+atlassian.confluence.hostname=localhost 
 atlassian.confluence.port=8090
 atlassian.confluence.username=admin
 atlassian.confluence.password=admin
