--- a/pom.xml
+++ b/pom.xml
@@ -87,12 +87,11 @@
 			<scope>test</scope>
 		</dependency>
 
-<!--		JavaX-->
-<!--		<dependency>-->
-<!--			<groupId>org.apache.struts</groupId>-->
-<!--			<artifactId>struts2-core</artifactId>-->
-<!--			<version>6.1.2</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 
 		<!--Unirest-->
 		<dependency>
